# ROSCourseUC3M

./: CMakeLists.txt  README.md  package.xml
launch/: interaccion_system.launch
msg/: inf_personal_usuario.msg  pos_usuario.msg  usuario.msg
src/: dialogo_nodo.cpp  emocion_usuario_nodo.cpp  empaquetador_nodo.cpp  informacion_personal_nodo.cpp  matematico_nodo.cpp  posicion_usuario_nodo.cpp  reloj_nodo.cpp
